--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,9 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+        <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.min.css">
+        <link rel="stylesheet" href="https://bootswatch.com/5/minty/_variables.scss">
+        <link rel="stylesheet" href="https://bootswatch.com/5/minty/_bootswatch.scss">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +17,9 @@
         {% endblock %}
     </head>
     <body>
+    {% block header %}
+    {% include "parts/__header.html.twig" %}
+    {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
